# src/models/employee.ts
@@ -49,9 +49,9 @@ export interface EmployeeLeaveRequestFormData {
   startDate: string;
   endDate: string;
   reason: string;
-  status1: boolean;
-  status2: boolean;
-  status3: boolean;
+  status1: number;
+  status2: number;
+  status3: number;
 }
 
 export interface EmployeeLeaveRequest {
@@ -61,7 +61,7 @@ export interface EmployeeLeaveRequest {
   startDate: string;
   endDate: string;
   reason: string;
-  status1: boolean;
-  status2: boolean;
-  status3: boolean;
+  status1: number;
+  status2: number;
+  status3: number;
 } 
